# inspire12-youtube-transcript

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
transcript_extractor/: extractor.py
